<resources>
    <string name="app_name">Simple Catalogue</string>
    <string name="home">HOME</string>
    <string name="cars">Cars</string>
    <string name="books">Books</string>
    <string name="movies">Movies and TV shows</string>
    <string name="add">Add new category idea</string>
    <string name="CARS">CARS</string>
    <string name="search">Search</string>
    <string name="exampleCars">e.g. bmw</string>
    <string name="BOOKS">BOOKS</string>
    <string name="exampleBooks">e.g. Harry Potter</string>
    <string name="MOVIES_SHOWS">MOVIES AND TV SHOWS</string>
    <string name="exampleMovies">e.g. Action</string>
    <string name="NEW_IDEAS">NEW IDEAS</string>
    <string name="categoryName">Category name</string>
    <string name="categoryAPI">API name (data source)</string>
    <string name="search_by">Search by</string>
    <string name="save">Save</string>
    <string name="car_name">Car name</string>
    <string name="car_class">Car class</string>
    <string name="fuel">Fuel type</string>
    <string name="year">Year</string>
    <string name="book_title">Book title</string>
    <string name="author">Author</string>
    <string name="category">Category</string>
    <string name="copyright">Copyright</string>
    <string name="api_name">Api name</string>

</resources>