<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BooksFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/books"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/orange"
            android:gravity="center"
            android:text="@string/BOOKS"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="@+id/books"
            app:layout_constraintStart_toStartOf="@id/books"
            app:layout_constraintTop_toTopOf="@+id/books"
            android:backgroundTint="@color/white"/>

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:text="@string/search"
            android:backgroundTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/books" />

        <EditText
            android:id="@+id/queryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/exampleBooks"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/searchBtn"
            app:layout_constraintStart_toStartOf="@+id/books"
            app:layout_constraintTop_toBottomOf="@+id/books" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewBooks"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/queryText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>