<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/carName"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/car_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/carNameText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/carNameText" />

    <TextView
        android:id="@+id/carNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/border_red"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:paddingEnd="10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/carName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/carClass"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/car_class"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/carClassText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/carClassText" />

    <TextView
        android:id="@+id/carClassText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="35dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/border_red"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/carClass"
        app:layout_constraintTop_toBottomOf="@+id/carNameText" />

    <TextView
        android:id="@+id/carFuel"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/fuel"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/carFuelText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/carFuelText" />

    <TextView
        android:id="@+id/carFuelText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/border_red"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/carFuel"
        app:layout_constraintTop_toBottomOf="@+id/carClassText" />

    <TextView
        android:id="@+id/carYear"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/year"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/carYearText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/carYearText" />

    <TextView
        android:id="@+id/carYearText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/border_red"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/carYear"
        app:layout_constraintTop_toBottomOf="@+id/carFuelText" />


</androidx.constraintlayout.widget.ConstraintLayout>