<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:background="@color/purple_200"
        android:gravity="center"
        android:text="@string/book_title"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bookTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bookTitleText" />

    <TextView
        android:id="@+id/bookTitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/border_purple"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:paddingEnd="10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bookTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bookAuthor"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:background="@color/purple_200"
        android:gravity="center"
        android:text="@string/author"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bookAuthorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bookAuthorText" />

    <TextView
        android:id="@+id/bookAuthorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/border_purple"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bookAuthor"
        app:layout_constraintTop_toBottomOf="@+id/bookTitleText" />

    <TextView
        android:id="@+id/bookCategory"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:background="@color/purple_200"
        android:gravity="center"
        android:text="@string/category"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bookCategoryText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bookCategoryText" />

    <TextView
        android:id="@+id/bookCategoryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/border_purple"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bookCategory"
        app:layout_constraintTop_toBottomOf="@+id/bookAuthorText" />

    <TextView
        android:id="@+id/bookCopyright"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:background="@color/purple_200"
        android:gravity="center"
        android:text="@string/copyright"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bookCopyrightText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bookCopyrightText" />

    <TextView
        android:id="@+id/bookCopyrightText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/border_purple"
        android:gravity="center_vertical"
        android:minHeight="35dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bookCopyright"
        app:layout_constraintTop_toBottomOf="@+id/bookCategoryText" />

</androidx.constraintlayout.widget.ConstraintLayout>