<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/categoryName"
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:layout_marginStart="70dp"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/categoryName"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/categoryNameText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/categoryNameText" />

    <EditText
        android:id="@+id/categoryNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/border_orange"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:textSize="14sp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/categoryName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/categoryApiName"
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:layout_marginStart="70dp"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/api_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/categoryApiNameText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/categoryApiNameText" />

    <EditText
        android:id="@+id/categoryApiNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/border_orange"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:textSize="14sp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/categoryApiName"
        app:layout_constraintTop_toBottomOf="@+id/categoryNameText" />

    <TextView
        android:id="@+id/categorySearchBy"
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:layout_marginStart="70dp"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/search_by"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/categorySearchByText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/categorySearchByText" />

    <EditText
        android:id="@+id/categorySearchByText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/border_orange"
        android:gravity="center_vertical"
        android:minHeight="35dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/categorySearchBy"
        app:layout_constraintTop_toBottomOf="@+id/categoryApiNameText" />

    <ImageButton
        android:id="@+id/editBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="@+id/categorySearchByText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/categoryApiNameText"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_edit_24" />

    <ImageButton
        android:id="@+id/deleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="@+id/categorySearchByText"
        app:layout_constraintEnd_toStartOf="@+id/categoryApiName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_delete_24" />

</androidx.constraintlayout.widget.ConstraintLayout>